# fastblock

./: .gitignore  README.md  index.js  package-lock.json  package.json  vercel.json  webpack.config.js
fastblock/: pyproject.toml  requirements.txt
fastblock/blockchain/: README.md  blockchain.code-workspace
fastblock/blockchain/projects/blockchain/: .algokit.toml  README.md  pyproject.toml
fastblock/blockchain/projects/blockchain/.algokit/: .copier-answers.yml
fastblock/blockchain/projects/blockchain/smart_contracts/artifacts/storage/: client.py  client.ts
fastblock/blockchain/projects/blockchain/smart_contracts/storage/: Storage.approval.teal  Storage.arc32.json  Storage.clear.teal  contract.py  deploy_config.py
fastblock/blockchain/projects/blockchain/tests/: storage_client_test.py  storage_test.py
fastblock/src/fastblock/: account.py  async.js  bundle.js  bundle.js.LICENSE.txt  fasthtml.js  main.py  pyproject.toml  storage.py  style.css
