[project]
name = "fastblock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-fasthtml>=0.4.4",
    "algokit>=2.2.3",
    "algorand-python>=2.0.0",
    "pytest>=8.3.2",
    "puyapy>=3.0.1",
    "algokit-utils>=2.3.1",
    "pipx>=1.6.0",
    "keyring>=25.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"