[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["code-alexander <152750039+code-alexander@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^2.3.0"
python-dotenv = "^1.0.0"
algorand-python = "^2.0.0"
algorand-python-testing = "^0.3.0b1"

[tool.poetry.group.dev.dependencies]
algokit-client-generator = "^1.1.3"
pytest = "*"
pytest-cov = "*"
puyapy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["smart_contracts", "tests"]
